--- a/packages/richtypo-rules-common/package.json
+++ b/packages/richtypo-rules-common/package.json
@@ -2,7 +2,6 @@
   "name": "richtypo-rules-common",
   "version": "4.0.2",
   "description": "Common Typography Rules for Richtypo",
-  "main": "lib/common.js",
   "author": {
     "name": "Artem Sapegin",
     "url": "http://sapegin.me/"
@@ -11,6 +10,12 @@
     {
       "name": "David Bismut"
     }
+  ],
+  "main": "lib/common.js",
+  "types": "types/index.d.ts",
+  "files": [
+    "lib",
+    "types"
   ],
   "license": "MIT",
   "scripts": {
