feat: TypeScript rewrite
* JavaScript/Babel -> TypeScript
* Publish ESM files instead of CommonJS
* Jest -> Vitest
* Fledermaus -> custom script to generate example site
* Use npm workspaces
* Update all deps

BREAKING CHANGE:

* Node 18 is the minimum supported version
* All packages are published as ESM
*

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,9 +16,11 @@ jobs:
           git config --global user.email "${BOT_EMAIL}"
         env:
           BOT_EMAIL: ${{ secrets.BOT_EMAIL }}
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: .nvmrc
+          cache: 'npm'
       - run: npm ci
-      - run: npm run bootstrap
       - run: npm run test:coverage
       - uses: codecov/codecov-action@v2
