--- a/packages/richtypo-rules-fr/package.json
+++ b/packages/richtypo-rules-fr/package.json
@@ -2,15 +2,20 @@
   "name": "richtypo-rules-fr",
   "version": "4.0.21",
   "description": "French Typography Rules for richtypo.js",
-  "main": "lib/fr.js",
   "author": "David Bismut",
   "license": "MIT",
+  "type": "module",
+  "main": "dist/fr.js",
+  "types": "dist/fr.d.ts",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "richtypo-rules-common": "^4.1.18"
   },
   "scripts": {
-    "build": "babel src --out-dir lib --ignore **/*.test.js",
-    "watch": "babel -w src --out-dir lib --ignore **/*.test.js",
+    "build": "tsc",
+    "watch": "tsc --watch",
     "prepare": "npm run build"
   }
 }
