--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "../tsconfig.json",
-	"include": ["./src"],
+	"include": ["./src/**/*"],
 	"compilerOptions": {
+		"rootDir": "./src",
 		"outDir": "./dist"
 	}
 }
