--- a/packages/richtypo/tsconfig.json
+++ b/packages/richtypo/tsconfig.json
@@ -1,7 +1,8 @@
 {
-	"extends": "../../tsconfig.json",
-	"include": ["./src"],
-	"compilerOptions": {
+	"extends": "../tsconfig.settings.json",
+	"include": ["./src/**/*"],
+ 	"compilerOptions": {
+    "rootDir": "./src",
 		"outDir": "./dist"
 	}
 }
