--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "name": "richtypo-example",
   "version": "5.1.3",
+  "type": "module",
   "main": "dist/index.html",
   "private": true,
   "license": "MIT",
