--- a/packages/richtypo/tsconfig.json
+++ b/packages/richtypo/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../tsconfig.settings.json",
+	"extends": "../../tsconfig.settings.json",
 	"include": ["./src/**/*"],
  	"compilerOptions": {
     "rootDir": "./src",
