--- a/packages/richtypo-rules-en/package.json
+++ b/packages/richtypo-rules-en/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "dependencies": {
-    "richtypo-rules-common": "^5.1.3"
+    "richtypo-rules-common": "*"
   },
   "scripts": {
     "build": "tsc",
