--- a/packages/richtypo-rules-fr/package.json
+++ b/packages/richtypo-rules-fr/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "dependencies": {
-    "richtypo-rules-common": "^5.1.3"
+    "richtypo-rules-common": "*"
   },
   "scripts": {
     "build": "tsc",
