--- a/packages/richtypo-rules-ru/package.json
+++ b/packages/richtypo-rules-ru/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "richtypo-rules-common": "^5.1.3"
+    "richtypo-rules-common": "*"
   },
   "main": "dist/ru.js",
   "types": "dist/ru.d.ts",
