--- a/packages/richtypo-rules-en/tsconfig.json
+++ b/packages/richtypo-rules-en/tsconfig.json
@@ -1,8 +1,7 @@
 {
-	"extends": "../../tsconfig.settings.json",
-	"include": ["./src/**/*"],
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"rootDir": "./src",
-		"outDir": "./dist"
+		"rootDir": "src",
+		"outDir": "dist"
 	}
 }
