--- a/packages/richtypo/tsconfig.json
+++ b/packages/richtypo/tsconfig.json
@@ -1,8 +1,7 @@
 {
-	"extends": "../../tsconfig.settings.json",
-	"include": ["./src/**/*"],
- 	"compilerOptions": {
-    "rootDir": "./src",
-		"outDir": "./dist"
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"rootDir": "src",
+		"outDir": "dist"
 	}
 }
