--- a/packages/richtypo-rules-common/package.json
+++ b/packages/richtypo-rules-common/package.json
@@ -13,9 +13,5 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "prepare": "npm run build"
-  }
+  "scripts": {}
 }
