--- a/example/package.json
+++ b/example/package.json
@@ -1,16 +1,17 @@
 {
   "name": "richtypo-example",
   "version": "5.1.3",
+  "type": "module",
   "main": "dist/index.html",
   "private": true,
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^11.1.1",
     "glob": "^10.3.10",
-    "richtypo": "^5.1.3",
-    "richtypo-rules-en": "^5.1.3",
-    "richtypo-rules-fr": "^5.1.3",
-    "richtypo-rules-ru": "^5.1.3"
+    "richtypo": "*",
+    "richtypo-rules-en": "*",
+    "richtypo-rules-fr": "*",
+    "richtypo-rules-ru": "*"
   },
   "scripts": {
     "build": "tsx src"
