--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
@@ -16,16 +16,17 @@
     "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lerna": "^7.3.0",
+    "lerna": "^8.1.5",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "richtypo": "file:packages/richtypo",
     "richtypo-rules-en": "file:packages/richtypo-rules-en",
     "richtypo-rules-fr": "file:packages/richtypo-rules-fr",
     "richtypo-rules-ru": "file:packages/richtypo-rules-ru",
+    "rimraf": "^5.0.7",
     "ts-jest": "^29.1.1",
-    "tsx": "^3.13.0",
-    "typescript": "^5.2.2",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2",
     "vitest": "^0.34.6"
   },
   "scripts": {
@@ -37,15 +38,12 @@
     "lint": "eslint . --cache --fix",
     "format": "prettier --write \"**/*.{js,ts,tsx,md,css,html}\"",
     "gh-pages": "gh-pages -d example/dist",
-    "build": "npm run build --workspaces"
+    "clean": "rimraf -g \"packages/**/dist\" \"packages/**/*.tsbuildinfo\"",
+    "compile": "tsc --build tsconfig.build.json",
+    "prepare": "npm run compile"
   },
   "workspaces": [
-    "packages/richtypo",
-    "packages/richtypo-rules-common",
-    "packages/richtypo-rules-en",
-    "packages/richtypo-rules-ru",
-    "packages/richtypo-rules-fr",
-    "example"
+    "packages/*"
   ],
   "lint-staged": {
     "*.{js,ts,tsx,md,css,html}": "prettier --write",
