--- a/packages/richtypo-rules-fr/package.json
+++ b/packages/richtypo-rules-fr/package.json
@@ -11,11 +11,7 @@
     "dist"
   ],
   "dependencies": {
-    "richtypo-rules-common": "^5.1.3"
+    "richtypo-rules-common": "*"
   },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "prepare": "npm run build"
-  }
+  "scripts": {}
 }
