--- a/packages/richtypo-rules-ru/package.json
+++ b/packages/richtypo-rules-ru/package.json
@@ -9,18 +9,14 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "richtypo-rules-common": "^5.1.3"
+    "richtypo-rules-common": "*"
   },
   "main": "dist/ru.js",
   "types": "dist/ru.d.ts",
   "files": [
     "dist"
   ],
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "prepare": "npm run build"
-  },
+  "scripts": {},
   "keywords": [
     "typography",
     "typo",
