--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,15 @@
 {
 	"compilerOptions": {
-		"target": "es2015",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"incremental": true,
+		"target": "es2020",
+		"module": "CommonJS",
+		"moduleResolution": "Node10",
 		"declaration": true,
-		"outDir": "./dist",
-		"noEmit": false,
+		"sourceMap": true,
+		"composite": true,
 		"strict": true,
-		"noImplicitAny": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"strictBindCallApply": true,
-		"strictPropertyInitialization": true,
-		"noImplicitThis": true,
-		"alwaysStrict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"noUncheckedIndexedAccess": true,
-		"noImplicitOverride": true,
-		"noPropertyAccessFromIndexSignature": true,
 		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"skipLibCheck": true
-	},
-	"exclude": ["**/*.test.ts"]
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
+	}
 }
