--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,7 @@
 {
-	"extends": "../tsconfig.settings.json",
-	"include": ["./src/**/*"],
+	"extends": "../tsconfig.json",
 	"compilerOptions": {
+		"noEmit": true,
 		"rootDir": "./src",
 		"outDir": "./dist"
 	}
