--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,6 @@ insert_final_newline = true
 [*.{json,yml,md,babelrc,remarkrc}]
 indent_style = space
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
