--- a/.prettierrc
+++ b/.prettierrc
@@ -10,7 +10,7 @@
 				"printWidth": 70,
 				"useTabs": false,
 				"trailingComma": "none",
-				"proseWrap": "never"
+				"proseWrap": "preserve"
 			}
 		}
 	]
