--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
 	"compilerOptions": {
-		"incremental": true,
-		"target": "es2020",
-		"module": "CommonJS",
-		"moduleResolution": "Node10",
+		"rootDir": "src",
+		"outDir": "dist",
+		"target": "ES2020",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"declaration": true,
-		"sourceMap": true,
-		"composite": true,
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true
-	}
+	},
+	"include": ["src"],
+	"exclude": ["**/*.test.ts"]
 }
